<resources>
    <string name="app_name">Newsletter</string>
    <string name="home_subtitle">Home</string>
    <string name="categories_subtitle">Categories</string>
    <string name="articles_subtitle">Articles</string>
    <string name="article_detail">Article</string>
    <string name="settings_subtitle">Settings</string>
    <string name="favorites_subtitle">Favorites</string>
    <string name="about_us_subtitle">About us</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About us</string>
    <string name="about_us_description">We are 4 students from MIAGE (Méthodes informatiques appliquées à la Gestion d\'entreprises). We made this project to work our abilities in android.</string>
    <string name="about_us_link_repo">https://github.com/jeremychoisy/android-newsletter</string>
    <string name="action_show_favorite">Show favorite</string>
    <string name="action_set_favorite">Set favorite</string>
    <string name="no_article_found">We couldn\'t find any article matching your criteria</string>
    <string name="no_favorite_article_found">We couldn\'t find any favorite article</string>
    <string name="search">Search</string>
    <string name="librairies">Librairies</string>
    <string name="librairies_content">Librairies used : Retrofit, OkHTTP and Gson Room Persistence Library.</string>
    <string name="url_git">https://github.com/jeremychoisy/android-newsletter</string>
    <string name="git_repository">Git Repository</string>
    <string name="features">Features</string>
    <string name="features_git_repository">https://github.com/eamosse/android-mbds-2020/blob/main/mini_projet.md</string>
    <string name="features_content">
        \nAll the features shown in the git repo above have been implemented.\n\nNote a special feature on the filters by publisher, category and country which can be combined !
    </string>
</resources>