<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_favorite"
        android:icon="@drawable/ic_list_of_fav_32dp"
        android:title="@string/action_show_favorite"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_set_favorite"
        android:icon="@drawable/ic_favorite_border_black_48dp"
        android:title="@string/action_set_favorite"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <!-- Settings and About us, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about_us"
        android:title="@string/action_about_us"
        app:showAsAction="never"/>
</menu>